# reverse_priority

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/reverse_priority_step/: cartesian_error.h  matrix_rank.h  pchip.h  pseudo_inversion.h  rank_update.h  reverse_priority_step.h  reverse_priority_task.h  smooth_function.h  unilateral_constraint_activation.h
src/: main.cpp  reverse_priority_step.cpp
