<package format="2">
  <name>reverse_priority_step</name>
  <version>0.1.0</version>
  <description>reverse_priority_step</description>
  <maintainer email="alessandropalleschi94@gmail.com">Alessandro Palleschi</maintainer>

  <license>BSD</license>

  <author>Alessandro Palleschi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>control_msgs</depend> 
  <depend>control_toolbox</depend> 
  <depend>realtime_tools</depend> 
  <depend>urdf</depend> 
  <depend>eigen</depend>
  <depend>trajectory_generation</depend>
  <depend>kdl_parser</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>
    <depend>eigen_conversions</depend>

  <build_depend>message_generation</build_depend>
  
</package>
